import java.io.*;
import java.util.*;

/**
 * Parses student data from a file.
 */
public class DataParser {
    /**
     * Parses a list of UniversityStudent objects from the specified file.
     *
     * @param filename the name of the file to parse
     * @return a list of UniversityStudent objects
     * @throws IOException if an I/O error occurs
     */
    public static List<UniversityStudent> parseStudents(String filename) throws IOException {
        return new ArrayList<>();
    }
}
